# wasmi-demo

./: .gitattributes  Cargo.toml  README.md  hermit-loader-x86_64
examples/fib/: Cargo.toml
examples/fib/src/: lib.rs
src/: main.rs
wasm/: fib.wasm
