[package]
name = "wasmi-demo"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["wasm", "webassembly", "interpreter", "vm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = "0.32"
log = { version = "0.4", features = ["kv_unstable"]}
simple_logger = { version = "5.0", default-features = false, features = ["nightly"]}
anyhow = "1.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { version = "0.9", default-features = false, features = ["smp", "acpi", "pci", "fsgsbase", "tcp", "dhcpv4"] }